; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/echoaudio/extr_darla24_dsp.c_detect_input_clocks.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/echoaudio/extr_darla24_dsp.c_detect_input_clocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.echoaudio = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@ECHO_CLOCK_BIT_INTERNAL = common dso_local global i32 0, align 4
@GLDM_CLOCK_DETECT_BIT_ESYNC = common dso_local global i32 0, align 4
@ECHO_CLOCK_BIT_ESYNC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.echoaudio*)* @detect_input_clocks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @detect_input_clocks(%struct.echoaudio* %0) #0 {
  %2 = alloca %struct.echoaudio*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.echoaudio* %0, %struct.echoaudio** %2, align 8
  %5 = load %struct.echoaudio*, %struct.echoaudio** %2, align 8
  %6 = getelementptr inbounds %struct.echoaudio, %struct.echoaudio* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @le32_to_cpu(i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @ECHO_CLOCK_BIT_INTERNAL, align 4
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @GLDM_CLOCK_DETECT_BIT_ESYNC, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %1
  %17 = load i32, i32* @ECHO_CLOCK_BIT_ESYNC, align 4
  %18 = load i32, i32* %4, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %16, %1
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @le32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
